--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "scripts": {
     "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts src/server_manager/install_scripts/gcp_install_script.ts third_party/shellcheck/download/",
-    "do": "bash ./scripts/do_action.sh",
-    "actions": "find . -name '*_action.sh' | sed -E 's:./src/(.*)_action.sh:\\1:' | grep -v 'scripts/do_action'",
+    "action": "bash ./scripts/run_action.sh",
+    "action:list": "find . -name '*.action.sh' | sed -E 's:./src/(.*).action.sh:\\1:' | grep -v 'scripts/run_action'",
     "lint": "npm run shellcheck && npm run tslint",
     "shellcheck": "bash ./scripts/shellcheck.sh",
     "tslint": "npx tslint 'src/**/*.ts' -e '**/node_modules/**'"
