--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,22 +38,22 @@ jobs:
 
       - name: Manager
         run: |
-          SENTRY_DSN='test' yarn do server_manager/electron_app/release_linux
-          yarn do server_manager/test
+          SENTRY_DSN='test' npm run do server_manager/electron_app/release_linux
+          npm run do server_manager/test
 
       - name: Shadowbox
         if: runner.os == 'Linux'
         run: |
-          yarn do shadowbox/server/build
-          yarn do shadowbox/test
-          yarn do shadowbox/integration_test/run
+          npm run do shadowbox/server/build
+          npm run do shadowbox/test
+          npm run do shadowbox/integration_test/run
 
       - name: Metrics Server
         if: runner.os == 'Linux'
         run: |
-          yarn do metrics_server/build
-          yarn do metrics_server/test
+          npm run do metrics_server/build
+          npm run do metrics_server/test
 
       - name:  Sentry Webhook
         if: runner.os == 'Linux'
-        run: yarn do sentry_webhook/build
+        run: npm run do sentry_webhook/build
