attempt to roll our own setup...

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 ;enforces that the user is `npm install`ing with the correct node version
+;only works with `npm install` on older versions of npm - prefer `npm run setup`
 engine-strict=true
