--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "typescript": "^4"
   },
   "engines": {
-    "node": ">=16.13.0 <17",
-    "npm": ">=8.1.0 <9"
+    "node": "^16.13.0",
+    "npm": "^8.1.0"
   },
   "scripts": {
     "action": "bash ./scripts/run_action.sh",
