--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,49 +25,33 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v1
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Install Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 12
-
-      - name: Show Environment Info
-        run: yarn -v
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-
-      - name: Check yarn cache
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-yarn-
+          cache: npm
+          node-version: 16
 
       - name: Install dependencies
-        run: NODE_DTRACE_PROVIDER_REQUIRE=hard yarn --prefer-offline
+        run: NODE_DTRACE_PROVIDER_REQUIRE=hard npm ci
 
       - name: Lint
-        run: yarn lint
+        run: npm run lint
 
       - name: Manager
         run: |
-          SENTRY_DSN='test' yarn do server_manager/electron_app/release_linux
-          yarn do server_manager/test
+          SENTRY_DSN='test' npm run action server_manager/electron_app/release_linux
+          npm run action server_manager/test
 
       - name: Shadowbox
         if: runner.os == 'Linux'
         run: |
-          yarn do shadowbox/server/build
-          yarn do shadowbox/test
-          yarn do shadowbox/integration_test/run
+          npm run action shadowbox/server/build
+          npm run action shadowbox/test
+          npm run action shadowbox/integration_test/start
 
       - name: Metrics Server
         if: runner.os == 'Linux'
         run: |
-          yarn do metrics_server/build
-          yarn do metrics_server/test
+          npm run action metrics_server/build
+          npm run action metrics_server/test
 
-      - name:  Sentry Webhook
-        if: runner.os == 'Linux'
-        run: yarn do sentry_webhook/build
