Reorganize `npm run action` for better ergonomics
With this change `npm run action some/project/verb` becomes `npm run
action verb some/project`.  When the action is `start` or `test`, this
is aliased to `npm start some/project` or `npm test some/project`.  This
aligns better with npm's standard patterns, reduces typing, and results
in commands that look more like natural sentences.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,19 +39,19 @@ jobs:
 
       - name: Manager
         run: |
-          SENTRY_DSN='test' npm run action server_manager/electron_app/release_linux
-          npm run action server_manager/test
+          SENTRY_DSN='test' npm run action release_linux server_manager/electron_app
+          npm test server_manager
 
       - name: Shadowbox
         if: runner.os == 'Linux'
         run: |
-          npm run action shadowbox/server/build
-          npm run action shadowbox/test
-          npm run action shadowbox/integration_test/start
+          npm run action build shadowbox/server
+          npm test shadowbox
+          npm start shadowbox/integration_test
 
       - name: Metrics Server
         if: runner.os == 'Linux'
         run: |
-          npm run action metrics_server/build
-          npm run action metrics_server/test
+          npm run action build metrics_server
+          npm test metrics_server
 
