--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "clean": "rm -rf src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts src/server_manager/install_scripts/gcp_install_script.ts third_party/shellcheck/download/",
     "lint": "npm run lint:sh && npm run lint:ts",
     "lint:sh": "bash ./scripts/shellcheck.sh",
-    "lint:ts": "npx tslint 'src/**/*.ts' -e '**/node_modules/**'"
+    "lint:ts": "npx tslint 'src/**/*.ts' -e '**/node_modules/**'",
+    "start": "npm run action start",
+    "test": "npm run action test"
   },
   "workspaces": [
     "src/*"
