--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -31,7 +31,7 @@ COPY scripts scripts/
 COPY src src/
 COPY tsconfig.json ./
 COPY third_party third_party
-RUN ROOT_DIR=/ npm run action shadowbox/server/build
+RUN ROOT_DIR=/ npm run action build shadowbox/server
 
 # shadowbox image
 FROM ${NODE_IMAGE}
