--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -119,7 +119,7 @@ jobs:
         run: npm ci
 
       - name: Build Linux Manager
-        run: npm run action server_manager/electron_app/release_linux
+        run: npm run action server_manager/electron_app/package_linux
 
       - name: Upload Linux Client
         uses: actions/upload-artifact@v2
@@ -128,56 +128,56 @@ jobs:
           path: build/electron_app/static/dist/Outline-Manager.AppImage
           if-no-files-found: error
 
-  # manager-windows-debug-build:
-  #   name: Manager Windows Debug Build
-  #   runs-on: windows-2019
-  #   needs: manager-web-test
-  #   env:
-  #     SENTRY_DSN: debug
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2.3.4
+  manager-windows-debug-build:
+    name: Manager Windows Debug Build
+    runs-on: windows-2019
+    needs: manager-web-test
+    env:
+      SENTRY_DSN: debug
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
 
-  #     - name: Install Node
-  #       uses: actions/setup-node@v2.2.0
-  #       with:
-  #         node-version: 16
-  #         cache: npm
+      - name: Install Node
+        uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+          cache: npm
 
-  #     - name: Install NPM Dependencies
-  #       run: npm ci
+      - name: Install NPM Dependencies
+        run: npm ci
 
-  #     - name: Build Windows Manager
-  #       run: npm run action server_manager/electron_app/release_windows
+      - name: Build Windows Manager
+        run: npm run action server_manager/electron_app/package_only_windows
 
-  #     - name: Upload Windows Manager
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: manager_windows_debug
-  #         path: build/electron_app/static/dist/Outline-Manager.exe
-  #         if-no-files-found: error
+      - name: Upload Windows Manager
+        uses: actions/upload-artifact@v2
+        with:
+          name: manager_windows_debug
+          path: build/electron_app/static/dist/Outline-Manager.exe
+          if-no-files-found: error
 
-  # manager-mac-debug-build:
-  #   name: Manager MacOS Debug Build
-  #   runs-on: macos-11
-  #   needs: manager-web-test
-  #   env:
-  #     SENTRY_DSN: debug
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2.3.4
+  manager-mac-debug-build:
+    name: Manager MacOS Debug Build
+    runs-on: macos-11
+    needs: manager-web-test
+    env:
+      SENTRY_DSN: debug
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
 
-  #     - name: Install Node
-  #       uses: actions/setup-node@v2.2.0
-  #       with:
-  #         node-version: 16
-  #         cache: npm
+      - name: Install Node
+        uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+          cache: npm
 
-  #     - name: Install NPM Dependencies
-  #       run: npm ci
+      - name: Install NPM Dependencies
+        run: npm ci
 
-  #     - name: Set XCode Version
-  #       run: sudo xcode-select -switch /Applications/Xcode_13.2.app
+      - name: Set XCode Version
+        run: sudo xcode-select -switch /Applications/Xcode_13.2.app
 
-  #     - name: Build OSX Manager
-  #       run: npm run action server_manager/electron_app/release_macos
+      - name: Build OSX Manager
+        run: npm run action server_manager/electron_app/package_macos
