--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -100,33 +100,10 @@ jobs:
         run: npm run action server_manager/test
 
   manager-linux-debug-build:
-    name: Manager Linux Debug Build
-    runs-on: ubuntu-latest
     needs: manager-web-test
     env:
       SENTRY_DSN: debug
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-
-      - name: Install Node
-        uses: actions/setup-node@v2.2.0
-        with:
-          node-version: 16
-          cache: npm
-
-      - name: Install NPM Dependencies
-        run: npm ci
-
-      - name: Build Linux Manager
-        run: npm run action server_manager/electron_app/build --platform linux
-
-      - name: Upload Linux Client
-        uses: actions/upload-artifact@v2
-        with:
-          name: manager_linux_debug
-          path: build/server_manager/electron_app/static/dist/Outline-Manager.AppImage
-          if-no-files-found: error
+    uses: ./.github/workflows/manager/linux/build_debug.yml
 
   manager-windows-debug-build:
     name: Manager Windows Debug Build
