--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # -- DEPRECATED: FOR REFERENCE ONLY --
-# Due to recent security issues with travis, we are in the process
+# Due to security issues with travis, we are in the process
 # of migrating to github actions: https://github.com/features/actions.
 
 language: node_js
