--- a/.github/workflows/build_and_test_debug.yml
+++ b/.github/workflows/build_and_test_debug.yml
@@ -100,10 +100,33 @@ jobs:
         run: npm run action server_manager/test
 
   manager-linux-debug-build:
+    name: Manager Linux Debug Build
     needs: manager-web-test
     env:
       SENTRY_DSN: debug
-    uses: ./.github/workflows/manager/linux/build_debug.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: Install Node
+        uses: actions/setup-node@v2.2.0
+        with:
+          node-version: 16
+          cache: npm
+
+      - name: Install NPM Dependencies
+        run: npm ci
+
+      - name: Build Linux Manager
+        run: npm run action server_manager/electron_app/build --platform linux
+
+      - name: Upload Linux Client
+        uses: actions/upload-artifact@v2
+        with:
+          name: manager_linux_debug
+          path: build/server_manager/electron_app/static/dist/Outline-Manager.AppImage
+          if-no-files-found: error
 
   manager-windows-debug-build:
     name: Manager Windows Debug Build
