--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,13 @@
     "es2021": true,
     "node": true
   },
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint"],
   "rules": {
     "no-prototype-builtins": "off",
     "@typescript-eslint/ban-types": "off",
@@ -43,9 +38,7 @@
       }
     },
     {
-      "files": [
-        "packages/lit-html/src/test/version-stability_test.js"
-      ],
+      "files": ["packages/lit-html/src/test/version-stability_test.js"],
       "env": {
         "mocha": true
       }
