--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/jasmine": "^3.5.10",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
+    "@webpack-cli/serve": "^1.6.1",
     "eslint": "^8.10.0",
     "generate-license-file": "^1.2.0",
     "husky": "^1.3.1",
