okay put this up see where we're at

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,9 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "compat"],
   "rules": {
+    "compat/compat": "error",
     "no-prototype-builtins": "off",
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
