--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "outline-server",
   "private": true,
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.0.0",
     "@types/jasmine": "^3.5.10",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
+    "eslint-plugin-compat": "^4.0.2",
     "generate-license-file": "^1.2.0",
     "husky": "^1.3.1",
     "jasmine": "^3.5.0",
