--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@types/jasmine": "^3.5.10",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
-    "browserslist": "^4.20.3",
     "@webpack-cli/serve": "^1.6.1",
+    "browserslist": "^4.20.3",
     "eslint": "^8.10.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-compat": "^4.0.2",
+    "eslint-plugin-import": "^2.26.0",
     "generate-license-file": "^1.2.0",
     "husky": "^1.3.1",
     "jasmine": "^3.5.0",
